--- a/package.json
+++ b/package.json
@@ -48,12 +48,14 @@
     "webpack-livereload-plugin": "^0.10.0"
   },
   "dependencies": {
+    "axios": "^0.16.1",
     "cool-ascii-faces": "^1.3.4",
     "ecstatic": "^1.4.0",
     "flexboxgrid": "^6.3.1",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-redux": "^5.0.5",
-    "redux": "^3.6.0"
+    "redux": "^3.6.0",
+    "redux-thunk": "^2.2.0"
   }
 }
