--- a/package.json
+++ b/package.json
@@ -52,6 +52,8 @@
     "cool-ascii-faces": "^1.3.4",
     "ecstatic": "^1.4.0",
     "flexboxgrid": "^6.3.1",
+    "lodash": "^4.17.4",
+    "moment": "^2.18.1",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-redux": "^5.0.5",
